--- a/server/s14/appsettings.json
+++ b/server/s14/appsettings.json
@@ -12,6 +12,6 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CS": "Data Source=(localdb)\\s10;Initial Catalog=S14;Integrated Security=true"
+    "CS": "Server=DESKTOP-7FQRL0N;DataBase=S14;Integrated Security=true"
   }
 }
