feat(back): Modulo Qr endpoint, entidades, dto, mockdata, almacenamiento  (#6) (#47)
* endpoints creados

* feat(back):qr,crear endpoint dtos, mock data #6

* implementacion con Mongo db

* Implementacion del los respositorios, creacion de las entidades , servicios, y configuracion de persistencia

* correccion del tipo de inyeccion de servicios

* correccion de ortografia

* correcciones con una segunda opcion agregada

* correcion de advertencia

* feat(back):Generacion de Qr y almacenamiento (#6)

Entidades, Dtos, Generacion de Qr y SVG
Endpoints para pruebas

close: #6

* refactor(back):correccion de codificacion SVG

cambio de codificacion del SVG
codificacion de un elemento HTML

ref: #6

--- a/server/s14/appsettings.Development.json
+++ b/server/s14/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MongoDBSettings":{
+    "ConnectionString":"mongodb+srv://hilares33v:Xw9hl5MV7SXllRuy@nowait.yt1qfnt.mongodb.net/",
+    "DataBaseName":"QrDB"
   }
 }
