--- a/server/s14/appsettings.json
+++ b/server/s14/appsettings.json
@@ -12,6 +12,12 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CS": "Server=DESKTOP-7FQRL0N;DataBase=S14;Integrated Security=true"
+    // "CS": "Data Source=(localdb)\\s10;Initial Catalog=S14;Integrated Security=true"
+    "CS": "Server=db4147.public.databaseasp.net; Database=db4147; User Id=db4147; Password=6Ye@Wr_92Do+; Encrypt=False; MultipleActiveResultSets=True;"
+
+  },
+  "MongoDBSettings": {
+    "ConnectionString": "mongodb+srv://hilares33v:Xw9hl5MV7SXllRuy@nowait.yt1qfnt.mongodb.net/",
+    "DataBaseName": "QrDB"
   }
 }
