--- a/client/NoWait/package.json
+++ b/client/NoWait/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^17.3.5",
     "@angular/router": "^17.3.5",
     "@angular/service-worker": "^17.3.5",
+    "@microsoft/signalr": "^7.0.14",
     "flowbite": "^2.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
